--- a/Dinamic V3/test-output/index.html
+++ b/Dinamic V3/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse-1867308852\testng-customsuite.xml</span>
+                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse-1000940817\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.EditingCompanyDetails" class="method navigator-link" hash-for-method="deletingCategory">deletingCategory</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.EditingCompanyDetails" class="method navigator-link" hash-for-method="deletingCategory">deletingCategory</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.ServiceCharge" class="method navigator-link" hash-for-method="enableServiceCharge">enableServiceCharge</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.ServiceCharge" class="method navigator-link" hash-for-method="enableServiceCharge">enableServiceCharge</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -124,7 +124,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.ServiceCharge" class="method navigator-link" hash-for-method="seviceChargeAdd">seviceChargeAdd</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.ServiceCharge" class="method navigator-link" hash-for-method="seviceChargeAdd">seviceChargeAdd</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -147,14 +147,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.dinamic.v3.test.EditingCompanyDetails</span>
+              <span class="class-name">com.dinamic.v3.test.tescases.ServiceCharge</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="deletingCategory">
-                  </a> <!-- deletingCategory -->
-                  <span class="method-name">deletingCategory</span>
+                  <a name="enableServiceCharge">
+                  </a> <!-- enableServiceCharge -->
+                  <span class="method-name">enableServiceCharge</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="seviceChargeAdd">
+                  </a> <!-- seviceChargeAdd -->
+                  <span class="method-name">seviceChargeAdd</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -191,21 +198,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.dinamic.v3.test.ServiceCharge</span>
+              <span class="class-name">com.dinamic.v3.test.tescases.EditingCompanyDetails</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="enableServiceCharge">
-                  </a> <!-- enableServiceCharge -->
-                  <span class="method-name">enableServiceCharge</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="seviceChargeAdd">
-                  </a> <!-- seviceChargeAdd -->
-                  <span class="method-name">seviceChargeAdd</span>
+                  <a name="deletingCategory">
+                  </a> <!-- deletingCategory -->
+                  <span class="method-name">deletingCategory</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -213,7 +213,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse-1867308852\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse-1000940817\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -222,11 +222,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.Registration&quot;/&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.EditingCompanyDetails&quot;/&gt;
+      &lt;class name=&quot;com.dinamic.v3.test.tescases.EditingCompanyDetails&quot;/&gt;
+      &lt;class name=&quot;com.dinamic.v3.test.tescases.ServiceCharge&quot;/&gt;
       &lt;class name=&quot;com.dinamic.v3.test.tescases.OrdersTestCase&quot;/&gt;
+      &lt;class name=&quot;com.dinamic.v3.test.tescases.Registration&quot;/&gt;
       &lt;class name=&quot;com.dinamic.v3.test.tescases.OMSPageOrderCalculation&quot;/&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.ServiceCharge&quot;/&gt;
       &lt;class name=&quot;com.dinamic.v3.test.pages.OMSPage&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
@@ -271,32 +271,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ordersEntry')
 data.setCell(0, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(0, 3, 25317);
+data.setCell(0, 3, 26748);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'seviceChargeAdd')
-data.setCell(1, 2, 'com.dinamic.v3.test.ServiceCharge')
-data.setCell(1, 3, 11688);
+data.setCell(1, 2, 'com.dinamic.v3.test.tescases.ServiceCharge')
+data.setCell(1, 3, 25122);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'enableServiceCharge')
-data.setCell(2, 2, 'com.dinamic.v3.test.ServiceCharge')
-data.setCell(2, 3, 10574);
+data.setCell(2, 2, 'com.dinamic.v3.test.tescases.ServiceCharge')
+data.setCell(2, 3, 8702);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'deletingCategory')
-data.setCell(3, 2, 'com.dinamic.v3.test.EditingCompanyDetails')
-data.setCell(3, 3, 8643);
+data.setCell(3, 2, 'com.dinamic.v3.test.tescases.EditingCompanyDetails')
+data.setCell(3, 3, 8501);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'log')
 data.setCell(4, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(4, 3, 290);
+data.setCell(4, 3, 269);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'withoutItemDiscountPrice')
 data.setCell(5, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(5, 3, 2);
+data.setCell(5, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 56 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -315,16 +315,16 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</span>
+              <span class="ignored-class-name">com.dinamic.v3.test.tescases.Registration</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">logout</span>
+                <span class="ignored-method-name">registration</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dinamic.v3.test.Registration</span>
+              <span class="ignored-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">registration</span>
+                <span class="ignored-method-name">logout</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -343,50 +343,47 @@ return data;
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.ServiceCharge</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.dinamic.v3.test.tescases.ServiceCharge</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforTestMethod</span>
-                <span class="method-start">4499 ms</span>
+                <span class="method-start">5069 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.EditingCompanyDetails</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.dinamic.v3.test.tescases.EditingCompanyDetails</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">deletingCategory</span>
-                <span class="method-start">4581 ms</span>
+                <span class="method-start">5129 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.dinamic.v3.test.tescases.ServiceCharge</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">enableServiceCharge</span>
+                <span class="method-start">13641 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">seviceChargeAdd</span>
+                <span class="method-start">22344 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">log</span>
-                <span class="method-start">13233 ms</span>
+                <span class="method-start">47468 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">withoutItemDiscountPrice</span>
-                <span class="method-start">13529 ms</span>
+                <span class="method-start">47740 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ordersEntry</span>
-                <span class="method-start">13536 ms</span>
+                <span class="method-start">47746 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.ServiceCharge</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">enableServiceCharge</span>
-                <span class="method-start">38855 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">seviceChargeAdd</span>
-                <span class="method-start">49430 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">61121 ms</span>
+                <span class="method-start">74496 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
